# vr-corridor-2p

./: .copier-answers.yml  .gitignore  README.md  pyproject.toml  vr-corridor-2p.sln
.bonsai/: Bonsai.config  NuGet.config
.bonsai/Settings/src/: main.editor  main.layout  serial.layout
.config/: dotnet-tools.json
examples/: load_data.py  rig.py  session.py  task.py
local_packages/: UclOpen.Core.0.1.2-dev0.nupkg  UclOpen.Devices.0.1.2-dev0.nupkg  UclOpen.Logging.0.1.2-dev0.nupkg
scripts/: deploy.cmd  deploy.ps1
src/: Extensions.csproj  create_textures.m  main.bonsai  src.sln
src/DataSchemas/: ucl_open_vr_corridor_2p.json
src/Extensions/: CollapseTrialLandmarks.cs  CurrentLandmark.cs  LandmarkIsEmpty.cs  LandmarkPositionRange.cs  MaximumBoundary.cs  MinimumBoundary.cs  OverflowDifference.cs  ParseMatrixSerialDeviceData.cs  ShuffleList.cs  UclOpenVrCorridor2p.Generated.cs
src/ucl_open_vr_corridor_2p/: __init__.py  data_types.py  regenerate.py  rig.py  session.py  task.py
temp_data/sub-Plimbo/ses-001_date-2026-01-20T09-52-59/MatrixArduino/: MatrixArduino.csv
temp_data/sub-Plimbo/ses-001_date-2026-01-20T09-52-59/VrPosition/: VrPosition.csv
textures/: create_textures.m
textures/NewTextures/: create_textures.m
